--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 7777 --host",
+    "lint": "eslint --ext .js,.jsx --ignore-path .gitignore src",
+    "lint:fix": "eslint --ext .js,.jsx --ignore-path .gitignore --fix src"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.1",
@@ -22,6 +24,7 @@
     "@vitejs/plugin-react": "^2.0.1",
     "eslint": "^8.23.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.31.1",
     "vite": "^3.0.7",
     "vite-plugin-eslint": "^1.8.1"
